# march-madness-oracle

./: .env.example  .gitignore  BACKTEST_REPORT.md  MARCH_MADNESS_PREDICTOR_PLAN.md  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml  daily_data_refresh.yml  tournament_predict.yml  weekly_retrain.yml
configs/: default.yaml  feature_experiments.yaml  tune_ensemble.yaml  tune_xgboost.yaml
data/processed/: enhanced_per_round.csv  leakfixed_per_round.csv  seed_baseline_per_round.csv
experiments/: leaderboard.csv
models/champion/: metadata.json  model.joblib
scripts/: bootstrap_historical.py  bracket_from_pdf.py  fetch_bracket.py  promote_champion.py  train_80pct_push.py  train_baseline_from_school_stats.py  train_enhanced.py  train_enhanced_leakfixed.py  train_seed_baseline.py  train_stacking_80.py  train_tournament_only.py  train_with_torvik_prior.py
src/madness/: __init__.py  cli.py  config.py  logging_setup.py  predictions_file.py  storage.py
src/madness/features/: __init__.py  build.py  coach.py  coach_from_tournament.py  late_season.py  matchup.py  momentum.py  registry.py  rest.py  site_splits.py  team_season.py  tournament.py  travel.py
src/madness/ingest/: __init__.py  coaches.py  conferences.py  http.py  kenpom.py  massey.py  ncaa_api.py  sports_reference.py  (+2 more)
tests/: conftest.py  test_backtest_leakage.py  test_coaches_conf_parsers.py  test_config.py  test_discord.py  test_evaluate.py  test_features_matchup.py  test_features_no_leakage.py  test_late_season.py  test_models.py  test_registry.py  test_rest_and_splits.py  test_simulate.py  test_sr_parser.py  test_tournament_parser.py
(+15 files in other folders)
